--- a/01 _tipos_de_datos_estructuras_basicas/.vscode/launch.json
+++ b/01 _tipos_de_datos_estructuras_basicas/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Main",
+            "request": "launch",
+            "mainClass": "vista.Main",
+            "projectName": "01 _tipos_de_datos_estructuras_basicas_efa438c5"
+        },
+        {
+            "type": "java",
             "name": "Current File",
             "request": "launch",
             "mainClass": "${file}"
